Added file exploer

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -92,11 +92,13 @@
   </div>
 </div> -->
 
-
+<!-- 
 <div class="NavBar" *ngIf="userlogin">
   <app-navbar></app-navbar>
-</div>
+</div> -->
 
-<div class="routeDiv">
+<!-- <div class="routeDiv">
   <router-outlet></router-outlet>
-</div>
+</div> -->
+
+<app-file-m></app-file-m>
