--- a/src/app/file-m/file-m.component.html
+++ b/src/app/file-m/file-m.component.html
@@ -1,8 +1,4 @@
-<p>file-m works!</p>
-
-<input type="file" (change)="onFileSelected($event)" webkitdirectory directory multiple />
 
 
-<!-- Use the correct selector from the metadata: nxe-explorer -->
-<nxe-explorer></nxe-explorer>
+<nxe-explorer class="myFile-Expo"></nxe-explorer>
 
